# templa-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  commands.yml  submodules.json
.github/: CODEOWNERS
.github/chglog/: RELEASE.tpl.md  release.yml
.github/workflows/: CI.yml  CI_pull.yml  CI_push.yml  release.yml
src/: app.rs  command.rs  main.rs  models.rs  parse_json.rs  scrape.rs  search.rs  size.rs  tui.rs
src/models/: enums.rs  structs.rs
