[package]
name = "templa-rs"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
clap = { version = "2.33.3", features = ["yaml"] }
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
thiserror = "1.0.29"
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0.68"
ureq = { version = "*", features = ["json"] }
progress_bar = "0.1.3"
git2 = "0.13"
