[package]
name = "templa-rs"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "2.33.3", features = ["yaml"] }
crossterm = "0.20"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
git2 = "0.13.23"
progress_bar = "0.1.3"

[features]
default=["vendored-libgit2"]
vendored-libgit2 = ["git2/vendored-libgit2"]
